--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-h5-audio-player": "^1.1.0",
-    "react-scripts": "2.1.5"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false && react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
