--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-h5-audio-player": "^1.1.0",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
